# aurOS

./: .gitignore  Cargo.toml  Makefile.toml  boot.s  make.toml
.cargo/: config
kernel/: Cargo.toml  Makefile.toml
kernel/.cargo/: config
kernel/src/: panic.rs  test_runner.rs
kernel/src/vga/: macros.rs  mod.rs
os_loader/: Cargo.toml  Makefile.toml
os_loader/.cargo/: config
os_loader/src/: main.rs  panic.rs
os_loader/src/types/: primitives.rs
src/: kernel.rs  main.rs  os_loader.rs  panic.rs  test_runner.rs  vga.rs
src/vga/: macros.rs  mod.rs  vga_buffer.rs  vga_char.rs
